--- a/packages/admin-dashboard/src/locales/en/common.json
+++ b/packages/admin-dashboard/src/locales/en/common.json
@@ -2,10 +2,10 @@
     "update": "Update",
     "create": "Create",
     "save": "Save",
-    "remove": "Remove",
+    "remove": "Delete",
     "upload": "Uploading",
     "cancel": "Cancel",
-    "back": "Return",
+    "back": "Back",
     "accept": "Accept",
     "show": "Show",
     "content": "Content",
@@ -15,7 +15,7 @@
     "delete": "Delete",
     "preview": "Preview",
     "details": "Details",
-    "customFields": "Non-standard fields",
+    "customFields": "Custom fields",
     "defaultChannel": "Default channel",
     "buttonDisabledTooltip": "Add correct changes to save",
     "confirmationDialog": {
@@ -38,7 +38,7 @@
         "orders": {
             "empty": {
                 "title": "No orders",
-                "text": "No orders available yet"
+                "text": "No orders yet"
             },
             "filtered": {
                 "title": "Nothing fits",
@@ -103,7 +103,7 @@
         "countries": "countries",
         "paymentMethods": "payment methods",
         "shippingMethods": "shipping methods",
-        "stockLocations": "storage locations",
+        "stockLocations": "warehouse locations",
         "taxCategories": "tax categories",
         "taxRates": "tax rates",
         "logOut": "logout",
@@ -118,7 +118,7 @@
     "paymentSettled": "Cleared payment",
     "shipped": "Sent",
     "partiallyShipped": "Partially dispatched",
-    "partiallyFulfilled": "Partially implemented",
+    "partiallyFulfilled": "Partially executed",
     "partiallyDelivered": "Partially implemented",
     "delivered": "Delivered",
     "cancelled": "Cancelled",
@@ -129,11 +129,11 @@
     "password": "Password",
     "rememberMe": "Remember me",
     "login": "Login",
-    "welcome": "Welcome back. Good to see you again.",
+    "welcome": "Hello again. Good to see you again.",
     "photoBy": "Photo by",
     "unsplash": "Unsplash",
     "poweredBy": "Powered by",
-    "logVendure": "Log in to Vendure",
+    "logVendure": "Login to Vendure",
     "awesomeMenu": {
         "activeAdministratorsValue": "Active administrators ({{value}})",
         "activeAdministrators": "Active administrators",
@@ -154,7 +154,7 @@
     },
     "language": "Language",
     "logOut": "Logout",
-    "clear": "Clear",
+    "clear": "Clean",
     "clearCache": "Clear cache",
     "themeLight": "Light",
     "themeDark": "Dark",
@@ -230,34 +230,34 @@
             "active": "Active",
             "additionalInformation": "Additional information",
             "code": "Code",
-            "createdAt": "Established in",
+            "createdAt": "Created in",
             "currencyCode": "Currency code",
             "customerLastName": "Customer name",
             "id": "Id",
             "orderPlacedAt": "Order placed at",
             "shipping": "Shipping",
             "shippingWithTax": "Shipping with tax",
-            "state": "State",
+            "state": "Condition",
             "subTotal": "Subtotal",
             "subTotalWithTax": "Sub-total with tax",
             "token": "Token",
             "total": "total",
             "totalQuantity": "Total quantity",
-            "totalWithTax": "Total incl. tax",
-            "transactionId": "Transaction ID",
+            "totalWithTax": "Total including tax",
+            "transactionId": "Transaction identifier",
             "type": "Type",
             "updatedAt": "Updated by",
             "aggregateOrderId": "Aggregate order identifier",
             "getProforma": "Download proforma",
             "registeredOnCheckout": "Registered at checkout",
-            "enabled": "Included",
+            "enabled": "Enabled",
             "name": "Name",
             "firstName": "Name",
             "phoneNumber": "Telephone number",
             "emailAddress": "E-mail address",
-            "slug": "Snail",
+            "slug": "Short name (slug)",
             "description": "Description",
-            "isPrivate": "It is private",
+            "isPrivate": "Is private",
             "inheritFilters": "Filter inheritance",
             "position": "Position",
             "parentId": "Parent identifier",
@@ -298,9 +298,9 @@
             "PartiallyDelivered": "Partially delivered",
             "Delivered": "Delivered",
             "Modifying": "Modification",
-            "ArrangingAdditionalPayment": "Arranging an additional payment",
+            "ArrangingAdditionalPayment": "Determination of additional payment",
             "Cancelled": "Cancelled",
-            "InRealization": "In implementation",
+            "InRealization": "In progress",
             "Regular": "Regular",
             "Aggregate": "Aggregate",
             "Seller": "Seller"
@@ -325,7 +325,7 @@
         "ce": "Chechen",
         "co": "Corsican",
         "cs": "Czech",
-        "cu": "Church Slavonic",
+        "cu": "Orthodox Slavonic language",
         "cy": "Welsh",
         "da": "Danish",
         "de": "German",
@@ -414,7 +414,7 @@
         "os": "Ossetian",
         "pa": "Punjabi",
         "pl": "Polish",
-        "ps": "Pashto",
+        "ps": "Paszto",
         "pt": "Portuguese",
         "pt_BR": "Brazilian Portuguese",
         "pt_PT": "European Portuguese",
@@ -422,7 +422,7 @@
         "rm": "Romance language",
         "rn": "Rundi",
         "ro": "Romanian",
-        "ro_MD": "Moldavian",
+        "ro_MD": "Moldovan",
         "ru": "Russian",
         "rw": "Kinyarwanda",
         "sa": "Sanskrit",
@@ -431,7 +431,7 @@
         "sg": "Sango",
         "si": "Sinhala",
         "sk": "Slovak",
-        "sl": "Slovenian",
+        "sl": "Slovene",
         "sm": "Samoan",
         "sn": "Shona",
         "so": "Somali",
@@ -450,7 +450,7 @@
         "tk": "Turkmen",
         "to": "Tonga",
         "tr": "Turkish",
-        "tt": "Tartar",
+        "tt": "Tatar",
         "ug": "Uyghur",
         "uk": "Ukrainian",
         "ur": "Urdu",
@@ -467,7 +467,7 @@
         "zu": "Zulu"
     },
     "asset": {
-        "dialogTitle": "Select resource",
+        "dialogTitle": "Select a resource",
         "dialogButton": "Select resource",
         "dialogSearchPlaceholder": "Searching for resources by name",
         "tags": "Filter by tag",
@@ -479,7 +479,7 @@
     },
     "product": {
         "dialogTitle": "Select a product",
-        "dialogButton": "Select a product",
+        "dialogButton": "Select product",
         "dialogSearchPlaceholder": "Product search by name",
         "perPageValue": "{{value}} per page",
         "confirmButton": "Add product",
@@ -514,18 +514,18 @@
         }
     },
     "custom-fields": {
-        "title": "Non-standard fields",
+        "title": "Custom fields",
         "description": "The fields created by the server plug-ins can be found here",
-        "clear": "Clear",
+        "clear": "Clean",
         "asset": {
             "title": "List of assets",
             "description": "Select assets from the following list",
-            "pick": "Select resource"
+            "pick": "Select an asset"
         },
         "product": {
             "title": "List of products",
             "description": "Select products from the following list",
-            "pick": "Select a product"
+            "pick": "Select product"
         },
         "productvariant": {
             "title": "List of product variants",
@@ -536,17 +536,17 @@
     "history": {
         "edit": "Edit",
         "delete": "Delete",
-        "deleteNoteHeader": "Delete note?",
+        "deleteNoteHeader": "Remove note?",
         "editNoteHeader": "Edit note",
         "isPrivate": "The note is private",
         "isPrivateDescription": "(optional)",
-        "toAdmins": "Only visible for administrators",
+        "toAdmins": "Visible only to administrators",
         "toAdminsAndCustomer": "Visible to administrators and customers",
         "sure": "Are you sure?",
         "cancel": "Cancel",
         "addComment": "Add comment",
         "addCommentButton": "Add comment",
-        "sureDescription": "Unable to restore a deleted note",
+        "sureDescription": "Cannot restore a deleted note",
         "showPayment": "Show payment",
         "paymentId": "Payment ID: {{value}}",
         "showFulfillment": "Show implementation",
@@ -600,9 +600,9 @@
         "configurableArgsRequired": "Fill in all fields"
     },
     "globalErrors": {
-        "foreignKeyError": "You cannot delete an object from table {{parentTable}} because there is a dependency in table {{dependentTable}}. First delete the related records or update their references.",
+        "foreignKeyError": "Unable to delete object from table {{parentTable}} because there is a dependency in table {{dependentTable}}. First delete the related records or update their references.",
         "defaultError": "An unexpected error occurred"
     },
     "filters": "Filters",
-    "loading": "Loading..."
+    "loading": "Charging ..."
 }
