--- a/packages/admin-dashboard/src/locales/en/orders.json
+++ b/packages/admin-dashboard/src/locales/en/orders.json
@@ -12,21 +12,22 @@
     "modifySuccess": "Order has been successfully modified",
     "image": "image",
     "name": "name",
-    "slug": "cochlea",
+    "slug": "Short name (slug)",
     "variants": "variants",
     "enabled": "on",
     "copied": "Text copied to clipboard",
     "noFilterField": "No",
     "columns": "Columns",
     "deleteOrCancel": "Delete/Cancel option selected",
-    "selectedValue": "{{from}} of {{to}} lines selected",
+    "selectedValue": "{{from}} of {{to}} lines was selected",
     "discountByValue": "Discount {{value}}",
     "editOptions": "Edit options",
     "total": "Total",
     "totalItems": "Total price of {{value}} products",
     "addPaymentInfo": "Add payment to proceed",
+    "markFulfillmentInfo": "Mark completion as delivered or cancel",
     "deleteDraft": {
-        "button": "Delete draft version",
+        "button": "Delete draft",
         "title": "Are you sure?",
         "descriptionDraft": "The following draft orders will be permanently deleted:",
         "descriptionOrder": "The following orders will be cancelled:",
@@ -39,7 +40,7 @@
         "name": "Name",
         "price": "Price",
         "action": "Operation",
-        "placeholder": "Enter to search for products..."
+        "placeholder": "Type to search for products..."
     },
     "forms": {
         "create": "Create order",
@@ -59,7 +60,7 @@
         "emailAddress": "E-mail address",
         "code": "Code",
         "createdAt": "Created in",
-        "placedAt": "Posted in",
+        "placedAt": "Placed in",
         "shipping": "Shipping",
         "updatedAt": "Updated in",
         "openMenu": "Open menu",
@@ -69,7 +70,7 @@
         "viewPayment": "Display payment details",
         "viewOrder": "View order",
         "paymentMethod": "Payment type",
-        "add": "Add your order",
+        "add": "Add order",
         "applyChanges": "Apply changes",
         "reviewChanges": "Review changes",
         "note": "Add note",
@@ -80,14 +81,14 @@
         "modifySuccess": "Order has been successfully modified",
         "image": "image",
         "name": "name",
-        "slug": "cochlea",
+        "slug": "Short name (slug)",
         "variants": "variants",
         "enabled": "on",
         "copied": "Text copied to clipboard",
         "noFilterField": "No",
         "columns": "Columns",
         "deleteOrCancel": "Delete/Cancel option selected",
-        "selectedValue": "{{from}} of {{to}} lines selected",
+        "selectedValue": "{{from}} of {{to}} lines was selected",
         "discountByValue": "Discount {{value}}",
         "editOptions": "Edit options",
         "total": "Total",
@@ -106,7 +107,7 @@
             "name": "Name",
             "price": "Price",
             "action": "Operation",
-            "placeholder": "Enter to search for products..."
+            "placeholder": "Type to search for products..."
         },
         "forms": {
             "create": "Create order",
@@ -126,7 +127,7 @@
             "emailAddress": "E-mail address",
             "code": "Code",
             "createdAt": "Created in",
-            "placedAt": "Posted in",
+            "placedAt": "Placed in",
             "shipping": "Shipping",
             "updatedAt": "Updated in",
             "openMenu": "Open menu",
@@ -140,7 +141,7 @@
             "phoneNumber": "Telephone number",
             "type": "Type",
             "totalWithTax": "Total incl. tax",
-            "realization": "Realisation"
+            "realization": "Implementation"
         },
         "filterPlaceholder": "Field for the filter",
         "createOrder": "Create order",
@@ -160,12 +161,12 @@
             "baseInfoCreated": "Created: {{value}}",
             "orderId": "Order #{{value}}",
             "addProduct": "Add product",
-            "back": "Return",
-            "draftOrder": "Order design",
+            "back": "Back",
+            "draftOrder": "Draft order",
             "leaveToastMessage": "Are you sure you want to leave this page?",
             "leaveToastButton": "Leave",
             "discardButton": "Reject",
-            "completeOrderButton": "Confirm draft order",
+            "completeOrderButton": "Approve draft order",
             "addTitle": "Add item to draft order",
             "viewTitle": "Items in order",
             "editTitle": "Items in order",
@@ -177,7 +178,7 @@
             "searchHeader": "Product",
             "searchPlaceholder": "Enter to search for products...",
             "product": "Product",
-            "slug": "Snail",
+            "slug": "Short name (slug)",
             "preview": "Preview",
             "id": "Id",
             "actions": "Activities",
@@ -194,7 +195,7 @@
             "noItems": "Missing elements in the draft order",
             "price": "Price",
             "priceWithTax": "Price with tax",
-            "totalWithTax": "Total incl. tax",
+            "totalWithTax": "Total including tax",
             "customFields": "Non-standard fields",
             "discount": "Discount",
             "orderCancelSuccessfully": "Order successfully cancelled",
@@ -203,7 +204,7 @@
             "realizeOrder": "Complete order",
             "areYouSure": "Are you sure?",
             "continue": "Continue",
-            "cancelOrderMessage": "After cancelling the order, no action will be allowed",
+            "cancelOrderMessage": "Once an order has been cancelled, no action will be permitted",
             "selectCustomer": {
                 "noCustomer": "No customer",
                 "titleLabel": "Title",
@@ -212,10 +213,10 @@
                 "emailLabel": "Email",
                 "phoneNumberLabel": "Telephone number",
                 "select": "Customer",
-                "selectButton": "Select a customer",
+                "selectButton": "Select customer",
                 "change": "Change customer",
                 "create": "Create client",
-                "customer": "Customer",
+                "customer": "Client",
                 "label": "Customer selection for this order",
                 "description": "Select a customer from the following list or create a new one",
                 "selectTab": "Select a customer",
@@ -230,7 +231,7 @@
                 "phoneNumber": "Telephone number",
                 "id": "Id",
                 "inputLabel": "To find a specific customer, use the field below and select the desired one from the list below",
-                "selectCustomerFailed": "Unsuccessful customer selection",
+                "selectCustomerFailed": "Failed to select customer",
                 "success": "Customer added to order",
                 "error": "Failed to add customer to order",
                 "noResults": "Customer of specified value not found"
@@ -308,7 +309,7 @@
             "inputStreet2Label": "Street Line 2",
             "inputStreet2Placeholder": "Street Line 2",
             "inputTaxLabel": "Company tax ID",
-            "inputTaxPlaceholder": "Company tax ID"
+            "inputTaxPlaceholder": "Company tax identifier"
         },
         "selectShipmentMethod": {
             "noLines": "At least one item is required",
@@ -316,11 +317,11 @@
             "cardDescription": "Choose your shipping method",
             "noSelected": "No shipping method selected.",
             "noSelectedTip": "Please add products before selecting a shipping method.",
-            "buttonLabel": "Set shipping method",
+            "buttonLabel": "Set your shipping method",
             "close": "Close",
             "save": "Save",
             "setMethodTitle": "Set shipping method",
-            "setMethodDescription": "Choose your shipping method",
+            "setMethodDescription": "Select shipping method",
             "shippingAdded": "Shipping method has been successfully added",
             "code": "Code:",
             "price": "Price:",
@@ -337,8 +338,8 @@
             "sku": "SKU",
             "fulfilled": "Realised",
             "onStockValue": "in stock {{value}}",
-            "emptyState": "Missing elements in the draft order",
-            "fulfill": "Fill out",
+            "emptyState": "No items in the draft order",
+            "fulfill": "Finalise",
             "handlers": {
                 "manual-fulfillment": {
                     "title": "Manual filling",
@@ -358,7 +359,7 @@
         "phoneNumber": "Telephone number",
         "type": "Type",
         "totalWithTax": "Total incl. tax",
-        "realization": "Realisation"
+        "realization": "Implementation"
     },
     "filterPlaceholder": "Field for the filter",
     "createOrder": "Create order",
@@ -378,12 +379,12 @@
         "baseInfoCreated": "Created: {{value}}",
         "orderId": "Order #{{value}}",
         "addProduct": "Add product",
-        "back": "Return",
-        "draftOrder": "Order design",
+        "back": "Back",
+        "draftOrder": "Draft order",
         "leaveToastMessage": "Are you sure you want to leave this page?",
         "leaveToastButton": "Leave",
         "discardButton": "Reject",
-        "completeOrderButton": "Confirm draft order",
+        "completeOrderButton": "Approve draft order",
         "addTitle": "Add item to draft order",
         "viewTitle": "Items in order",
         "editTitle": "Items in order",
@@ -395,7 +396,7 @@
         "searchHeader": "Product",
         "searchPlaceholder": "Enter to search for products...",
         "product": "Product",
-        "slug": "Snail",
+        "slug": "Short name (slug)",
         "preview": "Preview",
         "id": "Id",
         "actions": "Activities",
@@ -412,7 +413,7 @@
         "noItems": "Missing elements in the draft order",
         "price": "Price",
         "priceWithTax": "Price with tax",
-        "totalWithTax": "Total incl. tax",
+        "totalWithTax": "Total including tax",
         "customFields": "Non-standard fields",
         "discount": "Discount",
         "orderCancelSuccessfully": "Order successfully cancelled",
@@ -430,10 +431,10 @@
             "emailLabel": "Email",
             "phoneNumberLabel": "Telephone number",
             "select": "Customer",
-            "selectButton": "Select a customer",
+            "selectButton": "Select customer",
             "change": "Change customer",
             "create": "Create client",
-            "customer": "Customer",
+            "customer": "Client",
             "label": "Customer selection for this order",
             "description": "Select a customer from the following list or create a new one",
             "selectTab": "Select a customer",
@@ -526,7 +527,7 @@
         "inputStreet2Label": "Street Line 2",
         "inputStreet2Placeholder": "Street Line 2",
         "inputTaxLabel": "Company tax ID",
-        "inputTaxPlaceholder": "Company tax ID"
+        "inputTaxPlaceholder": "Company tax identifier"
     },
     "selectShipmentMethod": {
         "noLines": "At least one item is required",
@@ -534,11 +535,11 @@
         "cardDescription": "Choose your shipping method",
         "noSelected": "No shipping method selected.",
         "noSelectedTip": "Please add products before selecting a shipping method.",
-        "buttonLabel": "Set shipping method",
+        "buttonLabel": "Set your shipping method",
         "close": "Close",
         "save": "Save",
         "setMethodTitle": "Set shipping method",
-        "setMethodDescription": "Choose your shipping method",
+        "setMethodDescription": "Select shipping method",
         "shippingAdded": "Shipping method has been successfully added",
         "code": "Code:",
         "price": "Price:",
@@ -557,15 +558,15 @@
         "product": "Product",
         "sku": "SKU",
         "shippingMethod": "Shipping method",
-        "fulfillmentOptions": "Implementation options",
+        "fulfillmentOptions": "Fulfilment options",
         "fulfilled": "Realised",
         "onStockValue": "in stock: {{value}}",
-        "emptyState": "Missing elements in the draft order",
-        "fulfill": "Fill out",
+        "emptyState": "No items in the draft order",
+        "fulfill": "Finalise",
         "shippingAddress": "Shipping address",
         "handlers": {
             "manual-fulfillment": {
-                "title": "Manual filling",
+                "title": "Hand-filling",
                 "description": "Manual input of implementation details",
                 "method": "Method",
                 "trackingCode": "Tracking code"
@@ -582,7 +583,7 @@
     "phoneNumber": "Telephone number",
     "province": "Province",
     "toasts": {
-        "insufficientStockError": "The product variant with the identifier {{value}} does not exist in the current warehouse",
+        "insufficientStockError": "There is no product variant with the identifier {{value}} in the current stock",
         "orderLoadingError": "Failed to load order with ID {{value}}",
         "orderHistoryLoadingError": "Failed to load order history with identifier {{value}}",
         "orderLoadingDraftShippingError": "Failed to load eligible shipment for order with ID {{value}}",
@@ -590,7 +591,7 @@
     },
     "orderStates": {
         "button": "Order status",
-        "title": "Order status",
+        "title": "Order states",
         "description": " All possible order states and the current order status can be displayed here.",
         "currentState": "Current status",
         "possibleNextStates": "Possible subsequent states",
@@ -600,13 +601,22 @@
         "finalState": "Latest state"
     },
     "fulfillments": {
-        "title": "Realisation",
+        "title": "Implementation",
+        "description": "Track and manage the delivery status of your order",
         "method": "Method",
-        "state": "State",
+        "state": "Condition",
         "trackingCode": "Tracking code",
         "actions": "Activities",
         "markAsDelivered": " Mark as delivered",
-        "cancel": "Cancel"
+        "markAllAsDelivered": "Mark all as delivered",
+        "allDelivered": "All shipments delivered",
+        "cancel": "Cancel",
+        "states": {
+            "shipped": "Sent",
+            "created": "Created",
+            "delivered": "Delivered",
+            "cancelled": "Cancelled"
+        }
     },
     "taxSummary": {
         "title": "Fiscal summary",
@@ -646,7 +656,7 @@
     "topActions": {
         "manualChangeStatus": "Change status manually",
         "fillAll": "Fill in all required fields",
-        "errMsg": "Something went wrong",
+        "errMsg": "Something has gone wrong",
         "fulfillmentAdded": "Implementation has been successfully added",
         "orderCanceledSuccessfully": "Order successfully cancelled",
         "draftDeletedSuccessfully": "Draft order successfully deleted",
@@ -717,7 +727,7 @@
     "createCopyLineFail": "Failed to add product: {{value}}",
     "createCopyShippingFail": "Failed to add shipping method: {{value}}",
     "modify": {
-        "title": "Modify order with Id:{{value}}",
+        "title": "Modification of order with Id:{{value}}",
         "disclaimer": "Editing the line price is possible after saving the order with the newly added line",
         "priceDifference": "Price difference:",
         "productTable": {
@@ -740,7 +750,7 @@
         "noSelectedAttributes": "No attributes selected",
         "customLabel": "Non-standard value",
         "customPlaceholder": "Value",
-        "addCustomKey": "Add custom attribute",
+        "addCustomKey": "Add a custom attribute",
         "customKey": "Key",
         "customValue": "Value",
         "hint": "All custom keys and values must be defined",
@@ -777,7 +787,7 @@
         "plannedError": "Date of planned implementation required",
         "deadlineError": "Required completion date",
         "colorError": "Colour is required",
-        "charLeft": "Maximum {{value}} characters. {{value}} characters remaining",
+        "charLeft": "Maximum {{value}} characters remaining {{value}} characters",
         "datePlaceholder": "Select date",
         "changeStatusFailed": "Status change failed",
         "changeStatusFailedMsg": "Change of status failed {{value}}",
