--- a/packages/admin-dashboard/src/locales/en/permissions.json
+++ b/packages/admin-dashboard/src/locales/en/permissions.json
@@ -33,7 +33,7 @@
     },
     "Customer": {
         "title": "Customer",
-        "description": "Grants entitlement to client"
+        "description": "Grants rights to the client"
     },
     "CustomerGroup": {
         "title": "CustomerGroup",
