--- a/packages/admin-dashboard/src/locales/en/table.json
+++ b/packages/admin-dashboard/src/locales/en/table.json
@@ -24,34 +24,34 @@
         "active": "Active",
         "additionalInformation": "Additional information",
         "code": "Code",
-        "createdAt": "Established in",
+        "createdAt": "Created in",
         "currencyCode": "Currency code",
         "customerLastName": "Customer name",
         "id": "Id",
         "orderPlacedAt": "Order placed at",
         "shipping": "Shipping",
         "shippingWithTax": "Shipping with tax",
-        "state": "State",
+        "state": "Condition",
         "subTotal": "Subtotal",
         "subTotalWithTax": "Sub-total with tax",
         "token": "Token",
         "total": "total",
         "totalQuantity": "Total quantity",
-        "totalWithTax": "Total incl. tax",
-        "transactionId": "Transaction ID",
+        "totalWithTax": "Total including tax",
+        "transactionId": "Transaction identifier",
         "type": "Type",
         "updatedAt": "Updated by",
         "aggregateOrderId": "Aggregate order identifier",
         "getProforma": "Download proforma",
         "registeredOnCheckout": "Registered at checkout",
-        "enabled": "Included",
+        "enabled": "Enabled",
         "name": "Name",
         "firstName": "Name",
         "phoneNumber": "Telephone number",
         "emailAddress": "E-mail address",
-        "slug": "Snail",
+        "slug": "Short name (slug)",
         "description": "Description",
-        "isPrivate": "It is private",
+        "isPrivate": "Is private",
         "inheritFilters": "Filter inheritance",
         "position": "Position",
         "parentId": "Parent identifier",
@@ -78,7 +78,7 @@
         "in": "W",
         "notIn": "Not in",
         "isNull": "Is null",
-        "notEq": "Not equal to",
+        "notEq": "Is not equal to",
         "contains": "Contains",
         "notContains": "Does not contain",
         "before": "Before",
@@ -97,12 +97,12 @@
     },
     "columns": {
         "id": "ID",
-        "createdAt": "Established in",
+        "createdAt": "Created in",
         "updatedAt": "Updated by",
         "featuredAsset": "Assets",
         "name": "Name",
-        "slug": "Snail",
-        "enabled": "Included",
+        "slug": "Short name (slug)",
+        "enabled": "Enabled",
         "sku": "SKU",
         "description": "Description",
         "channels": "Channels",
@@ -114,7 +114,7 @@
         "payments": "Payments",
         "shippingAddress": "Shipping address",
         "customer": "Customer",
-        "state": "State",
+        "state": "Status",
         "totalWithTax": "Total",
         "code": "Code",
         "total": "Total",
@@ -156,7 +156,7 @@
         "where": "where",
         "noFieldsFound": "No fields found",
         "searchFields": "Search",
-        "noFiltersApplied": "No filters applied",
+        "noFiltersApplied": "No filters were used",
         "emptyState": "Add filters to narrow the results.",
         "operatorPlaceholder": "Selection operator"
     },
