--- a/packages/admin-dashboard/src/locales/pl/orders.json
+++ b/packages/admin-dashboard/src/locales/pl/orders.json
@@ -12,7 +12,7 @@
   "modifySuccess": "Zamówienie zostało pomyślnie zmodyfikowane",
   "image": "obraz",
   "name": "nazwa",
-  "slug": "ślimak",
+  "slug": "Skrócona nazwa (slug)",
   "variants": "warianty",
   "enabled": "włączony",
   "copied": "Tekst skopiowany do schowka",
@@ -81,7 +81,7 @@
     "modifySuccess": "Zamówienie zostało pomyślnie zmodyfikowane",
     "image": "obraz",
     "name": "nazwa",
-    "slug": "ślimak",
+    "slug": "Skrócona nazwa (slug)",
     "variants": "warianty",
     "enabled": "włączony",
     "copied": "Tekst skopiowany do schowka",
@@ -178,7 +178,7 @@
       "searchHeader": "Produkt",
       "searchPlaceholder": "Wpisz, aby wyszukać produkty...",
       "product": "Produkt",
-      "slug": "Ślimak",
+      "slug": "Skrócona nazwa (slug)",
       "preview": "Podgląd",
       "id": "Id",
       "actions": "Działania",
@@ -396,7 +396,7 @@
     "searchHeader": "Produkt",
     "searchPlaceholder": "Wpisz, aby wyszukać produkty...",
     "product": "Produkt",
-    "slug": "Ślimak",
+    "slug": "Skrócona nazwa (slug)",
     "preview": "Podgląd",
     "id": "Id",
     "actions": "Działania",
