--- a/packages/admin-dashboard/src/locales/pl/products.json
+++ b/packages/admin-dashboard/src/locales/pl/products.json
@@ -8,7 +8,7 @@
     "group": "Grupa opcji",
     "image": "Obraz",
     "name": "Nazwa",
-    "slug": "Ślimak",
+    "slug": "Skrócona nazwa (slug)",
     "product": "Produkt",
     "variants": "Warianty",
     "enabled": "Włączone",
@@ -62,7 +62,7 @@
         "createdAt": "Utworzono w",
         "updatedAt": "Zaktualizowano w",
         "name": "Nazwa",
-        "slug": "Ślimak",
+        "slug": "Skrócona nazwa (slug)",
         "variants": "Liczba wariantów",
         "collections": "W kolekcjach",
         "inValueCollections": "W kolekcjach {{value}}",
