--- a/packages/admin-dashboard/src/locales/pl/table.json
+++ b/packages/admin-dashboard/src/locales/pl/table.json
@@ -49,7 +49,7 @@
     "firstName": "Imię",
     "phoneNumber": "Numer telefonu",
     "emailAddress": "Adres e-mail",
-    "slug": "Ślimak",
+    "slug": "Skrócona nazwa (slug)",
     "description": "Opis",
     "isPrivate": "Jest prywatny",
     "inheritFilters": "Dziedziczenie filtrów",
@@ -101,7 +101,7 @@
     "updatedAt": "Zaktualizowano o",
     "featuredAsset": "Aktywa",
     "name": "Nazwa",
-    "slug": "Ślimak",
+    "slug": "Skrócona nazwa (slug)",
     "enabled": "Włączone",
     "sku": "SKU",
     "description": "Opis",
