--- a/packages/admin-dashboard/src/locales/en/collections.json
+++ b/packages/admin-dashboard/src/locales/en/collections.json
@@ -1,6 +1,6 @@
 {
     "create": "Create a collection",
-    "edit": "Edit collection",
+    "edit": "Edit the collection",
     "baseInfoCode": "Code: {{value}}",
     "baseInfoId": "Id: {{value}}",
     "baseInfoCreated": "Created: {{value}}",
@@ -17,28 +17,41 @@
         "columns": "Columns",
         "featuredAsset": "Image",
         "breadcrumb": "Path",
-        "slug": "Snail",
+        "slug": "Short name (slug)",
         "children": "Number of children",
         "collections": "In collections",
         "actions": "Activities",
         "copyId": "Copy id",
         "products": "number of products",
-        "delete": "Delete a collection"
+        "delete": "Remove collection"
     },
     "details": {
         "basic": {
             "title": "Basic information",
             "name": "Name",
-            "slug": "Snail",
-            "isPrivate": "It is private",
+            "slug": "Short name (slug)",
+            "isPrivate": "Is private",
             "description": "Description"
         },
         "filters": {
             "title": "Filters",
             "inherit": "Filter inheritance",
-            "condition": "State",
+            "condition": "Condition",
             "addCondition": "Add condition",
-            "addFacets": "Adding aspect values"
+            "addFacets": "Adding aspect values",
+            "labels": {
+                "codes": {
+                    "facet-value-filter": "Filter by facet values",
+                    "variant-name-filter": "Filter by product variant name",
+                    "variant-id-filter": "Select product variants manually",
+                    "product-id-filter": "Select products by hand"
+                },
+                "arguments": {
+                    "combination-mode": "Combination mode",
+                    "and": "I",
+                    "or": "OR"
+                }
+            }
         },
         "contents": {
             "title": "Content"
@@ -55,13 +68,13 @@
         "collectionCreatedSuccess": "The collection was successfully created",
         "collectionCreatedError": "Collection could not be created",
         "collectionDeleteSuccess": "Collection was successfully deleted",
-        "collectionDeleteError": "Failed to delete collection",
+        "collectionDeleteError": "Collection could not be deleted successfully",
         "deletionCollectionErrorToast": "Failed to delete collection",
         "deletionCollectionSuccessToast": "Collections were successfully deleted",
         "noCollectionChildrens": "collection {{collection}} has no children"
     },
     "deleteCollection": {
-        "title": "Delete a collection",
+        "title": "Delete collection",
         "description": "Are you sure you want to delete this collection?",
         "successMessage": "The collection has been removed.",
         "deleteOrCancel": "Delete/Cancel option selected"
@@ -72,7 +85,7 @@
     "rowsSelected": "{{selected}} of {{all}} selected rows",
     "duplicateCollection": "Are you sure you want to duplicate these collections?",
     "collectionActions": {
-        "move": "Move",
+        "move": "Transfer",
         "copy": "Duplicate",
         "assign": "Assign to channel",
         "deleteFromChannel": "Remove from current channel"
@@ -97,10 +110,10 @@
         }
     },
     "deleteCollectionDialog": {
-        "button": "Delete a collection",
+        "button": "Delete collection",
         "title": "Are you sure?",
         "description": "The collection will be permanently deleted.",
-        "confirm": "Delete a collection",
+        "confirm": "Delete collection",
         "cancel": "Cancel"
     },
     "deleteCollectionsFromChannel": {
@@ -111,7 +124,7 @@
         "removeError": "Cannot delete a collection from a feed"
     },
     "moveCollectionsToChannels": {
-        "moveCollections": "Transferring collections",
+        "moveCollections": "Moving a collection",
         "move": "Move",
         "selected": "Selected",
         "availableChannels": "Available channels",
@@ -129,7 +142,7 @@
     "moveCollectionsToCollections": {
         "targetCollection": "Target collection",
         "searchByName": "Search by name...",
-        "move": "Move",
+        "move": "Transfer",
         "selected": "Selected",
         "moveCollections": "Transferring collections",
         "movedAllCollections": "All collections transferred",
@@ -143,6 +156,6 @@
     "validation": {
         "filtersCodeRequired": "Select at least one filter",
         "filterArgsRequired": "Fill in all fields",
-        "nameSlugRequired": "Name and slug fields are required"
+        "nameSlugRequired": "The name and slug fields are required"
     }
 }
